Bug 507976: Check the anchor parameter while processing link header fields. r=bz